add git issue create, README.md
