# internal/pkg/domain/githubClientHandler.go
@@ -10,10 +10,10 @@ import (
 )
 
 type GithubClientHandler struct {
-	Client *github.Client
+	client *github.Client
 }
 
-func NewGithubClientHandler(cfg config.Config) *GithubClientHandler {
+func NewGithubClientHandler(cfg config.Config) GitClientHandler {
 
 	ctx := context.Background()
 	ts := oauth2.StaticTokenSource(
@@ -24,33 +24,50 @@ func NewGithubClientHandler(cfg config.Config) *GithubClientHandler {
 	client := github.NewClient(tc)
 
 	return &GithubClientHandler{
-		Client: client,
+		client: client,
 	}
 }
 
 // onwer를 넣으면 url 기반으로 가져와서 private 이 보이지 않고
 //
 // owner를 넣지 않으면 token 기반으로 가져와서 private 까지 확인 가능
-func (g *GithubClientHandler) GetRepoList(owner string) ([]*github.Repository, error) {
+func (g *GithubClientHandler) GetRepoList(owner string) ([]*GitRepo, error) {
 	opts := &github.RepositoryListOptions{Type: "owner", Sort: "updated", Direction: "desc"}
-	repos, _, err := g.Client.Repositories.List(context.Background(), owner, opts)
+	repos, _, err := g.client.Repositories.List(context.Background(), owner, opts)
 	if err != nil {
 		log.Printf("Repositories.List returned error: %v", err)
 		return nil, err
 	}
-	return repos, err
+
+	gitRepo := make([]*GitRepo, len(repos))
+
+	for i, v := range repos {
+		gitRepo[i] = &GitRepo{
+			Name: v.GetName(),
+		}
+	}
+
+	return gitRepo, err
 }
 
-func (g *GithubClientHandler) GetWorkflowList(owner, repo string) ([]*github.Workflow, error) {
+func (g *GithubClientHandler) GetWorkflowList(owner, repo string) ([]*GitWorkflow, error) {
 
-	workflows, _, err := g.Client.Actions.ListWorkflows(context.Background(), owner, repo, nil)
+	workflows, _, err := g.client.Actions.ListWorkflows(context.Background(), owner, repo, nil)
 	if err != nil {
 		log.Printf("Actions.ListWorkflows returned error: %v", err)
 		return nil, err
 	}
 
-	if i := workflows.TotalCount; *i > 0 {
-		return workflows.Workflows, err
+	if cnt := *workflows.TotalCount; cnt > 0 {
+		gitWorkFlow := make([]*GitWorkflow, cnt)
+		for i, v := range workflows.Workflows {
+			gitWorkFlow[i] = &GitWorkflow{
+				Id:   v.GetID(),
+				Name: v.GetName(),
+			}
+
+		}
+		return gitWorkFlow, nil
 	}
 	return nil, err
 }
@@ -65,7 +82,7 @@ func (g *GithubClientHandler) CreateWorkflowDispatchEventByFileName(owner, repo,
 		//  },
 	}
 
-	_, err := g.Client.Actions.CreateWorkflowDispatchEventByFileName(context.Background(), owner, repo, workflowFileName, event)
+	_, err := g.client.Actions.CreateWorkflowDispatchEventByFileName(context.Background(), owner, repo, workflowFileName, event)
 	if err != nil {
 		log.Printf("Actions.CreateWorkflowDispatchEventByFileName returned error: %v", err)
 		return err
@@ -74,23 +91,34 @@ func (g *GithubClientHandler) CreateWorkflowDispatchEventByFileName(owner, repo,
 	return nil
 }
 
-func (g *GithubClientHandler) CreateRepo(name, description string, isPrivate, isAutoInt bool) (*github.Repository, error) {
+func (g *GithubClientHandler) CreateRepo(name, description string, isPrivate, isAutoInit bool) (*GitRepo, error) {
 
-	r := &github.Repository{Name: &name, Private: &isPrivate, Description: &description, AutoInit: &isAutoInt}
+	r := &github.Repository{
+		Name:        &name,
+		Private:     &isPrivate,
+		Description: &description,
+		AutoInit:    &isAutoInit,
+	}
 
-	repo, _, err := g.Client.Repositories.Create(context.Background(), "", r)
+	repo, _, err := g.client.Repositories.Create(context.Background(), "", r)
 
 	if err != nil {
 		log.Printf("Repositories.Create returned error: %v", err)
 		return nil, err
 	}
 
-	return repo, err
+	gitRepo := &GitRepo{
+		Name:        repo.GetName(),
+		Description: repo.GetDescription(),
+		IsPrivate:   *repo.Private,
+	}
+
+	return gitRepo, err
 }
 
 func (g *GithubClientHandler) DeleteRepo(owner, repo string) error {
 
-	_, err := g.Client.Repositories.Delete(context.Background(), owner, repo)
+	_, err := g.client.Repositories.Delete(context.Background(), owner, repo)
 
 	if err != nil {
 		log.Printf("Repositories.Delete returned error: %v", err)
@@ -98,4 +126,69 @@ func (g *GithubClientHandler) DeleteRepo(owner, repo string) error {
 	}
 
 	return nil
+}
+
+func (g *GithubClientHandler) CreateIssue(owner, repo string, issueRequest *CreateGitIssueRequest) (*GitIssue, error) {
+
+	issue := &github.IssueRequest{
+		Title:    &issueRequest.Title,
+		Body:     &issueRequest.Body,
+		Assignee: &issueRequest.Assignee,
+		Labels:   &issueRequest.Labels,
+	}
+
+	newIssue, _, err := g.client.Issues.Create(context.Background(), owner, repo, issue)
+
+	if err != nil {
+		log.Printf("Issues.Create returned error: %v", err)
+		return nil, err
+	}
+
+	gitIssue := &GitIssue{
+		Title:    *newIssue.Title,
+		Body:     *newIssue.Body,
+		Labels:   *issue.Labels,
+		Assignee: *issue.Assignee,
+		Owner:    owner,
+		Repo:     repo,
+	}
+
+	return gitIssue, err
+}
+
+func (g *GithubClientHandler) GetIssueList(owner, repo string) ([]*GitIssue, error) {
+	opts := &github.IssueListByRepoOptions{Sort: "created", Direction: "desc"}
+
+	issueList, _, err := g.client.Issues.ListByRepo(context.Background(), owner, repo, opts)
+
+	if err != nil {
+		log.Printf("Issues.ListByRepo returned error: %v", err)
+		return nil, err
+	}
+
+	gitIssueList := make([]*GitIssue, len(issueList))
+
+	for i, v := range issueList {
+		gitIssueList[i] = &GitIssue{
+			Title:  *v.Title,
+			Body:   *v.Body,
+			Labels: parseIssueLabels(v.Labels),
+			Owner:  owner,
+			Repo:   repo,
+		}
+	}
+
+	return gitIssueList, nil
+
+}
+
+func parseIssueLabels(labels []*github.Label) []string {
+
+	returnLabels := make([]string, len(labels))
+
+	for i, v := range labels {
+		returnLabels[i] = *v.Name
+	}
+
+	return returnLabels
 }
